--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,15 @@ dependencies:
   font_awesome_flutter: ^10.12.0
   go_router: ^17.1.0
   google_fonts: ^8.0.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
+  build_runner: ^2.4.13
   flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
