--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^8.0.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   build_runner: ^2.4.13
